--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "next": "^14.2.33",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "resend": "^3.2.0"
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@types/node": "20.11.30",
